# txpulse

./: .gitignore  README.md  architecture.md  docker-compose.yml  justfile  txpulse.md  work-log.md
.github/workflows/: render-keepalive.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: db.rs  llm.rs  main.rs  stripe.rs
backend/tests/: smoke_test.rs
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  sentry.client.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/explain/: page.tsx
frontend/src/app/explain/[hash]/: page.tsx
frontend/src/app/s/[hash]/: page.tsx
frontend/src/components/dashboard/: AddressInput.tsx  FloatingNav.tsx  LatencyChart.tsx  MetricsGrid.tsx  StreamingStatsCard.tsx  TransactionFeed.tsx
frontend/src/components/explainer/: ExplainResultCard.tsx  ExplainWorkspace.tsx
frontend/src/components/providers/: SolanaWalletProvider.tsx  wallet-overrides.css
frontend/src/lib/: explainer.ts  types.ts  useTxPulseSocket.ts
