[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana Interaction
solana-client = "1.18"
solana-sdk = "1.18"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streams / Futures
futures = "0.3"
