[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana RPC and subscriptions (non-blocking APIs are used from these crates)
solana-client = "3"
solana-pubsub-client = "3"
solana-sdk = "3"
solana-transaction-status = "3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Env vars
dotenvy = "0.15"

# Utils
futures-util = { version = "0.3", features = ["sink"] }

# HTTP client for LLM integration
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Sentry
sentry = "0.34"
sentry-tracing = "0.34"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }